--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,242 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,400;1,700&display=swap");
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Roboto Condensed", sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.header {
+  width: 100%;
+  height: 10vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(31, 30, 30);
+  color: palevioletred;
+}
+
+.body {
+  min-height: 90vh;
+  width: 100%;
+  background-color: rgb(24, 44, 63);
+}
+
+.body-header {
+  width: 100%;
+  text-align: center;
+  padding-top: 25px;
+}
+
+.body-header-wrapper {
+  width: 55%;
+  padding: 20px 0;
+  margin: 0 auto;
+  background-color: whitesmoke;
+  border-radius: 15px;
+}
+
+.body-header-wrapper .rating-points {
+  width: 80%;
+  margin: 0 auto;
+  padding: 30px 10px 0;
+  display: grid;
+  grid-template-columns: repeat(10, 1fr);
+  gap: 0px;
+}
+
+.rating-points p {
+  width: 40px;
+  height: 40px;
+  font-weight: 700;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  background-color: lightgray;
+  cursor: pointer;
+  transition: 0.5s;
+}
+
+.rating-points p:hover {
+  background-color: palevioletred;
+}
+
+.rating-points p.active {
+  background-color: palevioletred;
+  color: white;
+}
+
+.body-header-wrapper .review-text-area {
+  width: 80%;
+  margin: 25px auto 10px;
+  padding: 5px 0;
+  border-radius: 8px;
+  text-align: left;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border: 1px solid gray;
+}
+
+.review-text-area input[type="text"] {
+  border: none;
+  padding-left: 10px;
+  font-size: 1rem;
+  width: 80%;
+  outline: none;
+}
+.review-text-area input[type="text"]::placeholder {
+  font-size: 0.9rem;
+}
+
+.body-header-wrapper .btn {
+  background-color: black;
+  color: white;
+  padding: 9px 18px;
+  margin-right: 10px;
+  border-radius: 5px;
+  transition: 0.5s;
+  border: none;
+}
+
+.btn:hover {
+  background-color: palevioletred;
+  color: white;
+  cursor: pointer;
+}
+
+.body-content {
+  width: 100%;
+  margin-top: 20px;
+  padding-bottom: 50px;
+}
+
+.body-content-wrapper {
+  width: 54%;
+  margin: 0 auto;
+}
+
+.body-content-wrapper .details {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: white;
+}
+
+.details p {
+  font-weight: 700;
+}
+
+.review-card {
+  margin-top: 20px;
+}
+
+.review-card article {
+  background-color: white;
+  margin-top: 25px;
+  border-radius: 10px;
+  padding: 5px 10px;
+}
+
+.review-card .head {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.head h2 {
+  font-size: 1rem;
+  height: 35px;
+  width: 35px;
+  border-radius: 50%;
+  background-color: rgb(208, 62, 111);
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: -20px;
+  left: -20px;
+  border: 0.5px solid white;
+}
+
+.head p {
+  font-size: 1.2rem;
+  font-weight: 900;
+  position: absolute;
+  top: 0px;
+  left: 98%;
+  color: rgb(161, 41, 41);
+  cursor: pointer;
+}
+
+.text p {
+  padding: 20px 5px;
+  line-height: 1.5;
+  font-weight: 700;
+}
+
+@media screen and (max-width: 1030px) {
+  .body-header-wrapper {
+    width: 75%;
+  }
+}
+@media screen and (max-width: 780px) {
+  .body-header-wrapper {
+    width: 85%;
+  }
+  .body-header-wrapper .rating-points {
+    width: 90%;
+  }
+  .body-header-wrapper .review-text-area {
+    width: 90%;
+  }
+}
+@media screen and (max-width: 555px) {
+  .body-header-wrapper .rating-points {
+    width: 70%;
+    grid-template-columns: repeat(5, 1fr);
+    row-gap: 15px;
+  }
+  .body-header-wrapper .review-text-area {
+    width: 80%;
+  }
+
+  .body-header-wrapper h2 {
+    font-size: 1.2rem;
+  }
+
+  .body-content-wrapper {
+    width: 85%;
+  }
+}
+@media screen and (max-width: 410px) {
+  .body-header-wrapper .rating-points {
+    width: 85%;
+  }
+  .body-header-wrapper .review-text-area {
+    width: 90%;
+  }
+
+  .body-header-wrapper h2 {
+    font-size: 0.9rem;
+  }
+}
+@media screen and (max-width: 330px) {
+  .body-header-wrapper {
+    width: 90%;
+  }
+
+  .body-header-wrapper .review-text-area {
+    padding: 3px 0;
+  }
+  .body-header-wrapper .btn {
+    padding: 5px 10px;
+  }
+  .body-content-wrapper {
+    width: 88%;
+  }
 }
